# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Esta é a documentação da API dos microserviços.",
-        "title": "Microservices API",
+        "title": "TCC mel",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -149,6 +149,22 @@
                         }
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/healthy": {
+            "get": {
+                "description": "essa rota server pra saber se nosso service tá on.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "service on",
                 "responses": {}
             }
         },
